manejo de almacenamiento y ejecucion concurrente para el hilo mesero

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
                 <version>3.11.0</version>
                 <configuration>
                     <release>21</release>
+                     <jvmArgs>
+            -Xms128m
+            -Xmx512m
+        </jvmArgs>
                 </configuration>
             </plugin>
             <plugin>
